url and paragraph for properties

--- a/library.properties
+++ b/library.properties
@@ -3,6 +3,10 @@ version=0.1
 author=Pete Benson
 maintainer=Pete Benson
 sentence=A library to control a motorized ball valve using the TB6612FNG Toshiba H-bridge
-paragraph=A library to control a motorized ball valve using the TB6612FNG Toshiba H-bridge
+paragraph=Controls this valse I got from amazon.
+HSH-Flo Motorized Ball Valve 1/2" DN15 12VDC CR-05 FNPT SS304 Position Feedback Motorized Electric Ball Valve by HSH-Flo
+HSH-Flo Motorized Ball Valve 1/2" DN15 12VDC CR-05 FNPT SS304 Position Feedback Motorized Electric Ball Valve
+by HSH-Flo
+Link: http://a.co/eBQ5h8m
 category=Device Control
-url=https://github.com/
+url=https://github.com/slickrockpete/MotorValve
